// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusText /> can pass props to underlying \`Text\` 1`] = `
<h4
  className="f15ktvug"
>
  <span
    className="f15gw5b4"
  >
    Text
  </span>
</h4>
`;

exports[`<StatusText /> statuses renders text 1`] = `
<div
  className="f85st9h"
>
  <span
    className="f1h4bg46"
  >
    notice
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 2`] = `
<div
  className="f85st9h"
>
  <span
    className="f1yvzoue"
  >
    info
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 3`] = `
<div
  className="f85st9h"
>
  <span
    className="f197guvy"
  >
    success
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 4`] = `
<div
  className="f85st9h"
>
  <span
    className="fgxorx7"
  >
    warning
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 5`] = `
<div
  className="f85st9h"
>
  <span
    className="fs8j2ev"
  >
    danger
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 6`] = `
<div
  className="f85st9h"
>
  <span
    className="f15gw5b4"
  >
    muted
  </span>
</div>
`;
